# DataLibC

./: CMakeLists.txt  README.md
DataLibC/Allocator/: DynamicMemoryPool.c  DynamicMemoryPool.h  MemoryPool.c  MemoryPool.h  ObjectPool.c  ObjectPool.h
DataLibC/Anim/AnimValue/: AnimBool.c  AnimBool.h  AnimFloat.c  AnimFloat.h  AnimInt.c  AnimInt.h  AnimVector2.c  AnimVector2.h
DataLibC/Anim/Animation/: Animation.c  Animation.h  AnimationClip.c  AnimationClip.h  AnimationCurve.c  AnimationCurve.h  Keyframe.c  Keyframe.h
DataLibC/Anim/Animation/Internal/: AnimationState.c  AnimationState.h  BoundCurve.c  BoundCurve.h  WrapCurve.h
DataLibC/Anim/Interface/: IAnimated.c  IAnimated.h
DataLibC/Compression/: BitReader.c  BitReader.h  BitWriter.c  BitWriter.h  Compression.c  Compression.h  HaffmanTree.c  HaffmanTree.h
DataLibC/Compression/ZLib/: ZLib.c  ZLib.h
DataLibC/Coroutine/: Coroutine.c  Coroutine.h
DataLibC/DS/: Algorithm.c  Algorithm.h  Allocation.c  Allocation.h  DefaultOperation.c  DefaultOperation.h  GenericTool.h  Iterator.c  Iterator.h  TypeEnum.c  TypeEnum.h
DataLibC/DS/BitSet/: BitSet.c  BitSet.h
DataLibC/DS/Hash/: Hash.c  Hash.h  hash_table.c  hash_table.h  hash_table_internal.h
DataLibC/DS/List/: DynamicArray.c  DynamicArray.h  LinkedList.c  LinkedList.h  SortedVector.c  SortedVector.h  StaticArray.c  StaticArray.h
DataLibC/DS/Map/: SortedMap.c  SortedMap.h  TreeMap.c  TreeMap.h
DataLibC/DS/Pair/: Pair.c  Pair.h
DataLibC/DS/Queue/: Queue.c  Queue.h
DataLibC/DS/Set/: HashSet.c  HashSet.h  SortedSet.c  SortedSet.h  TreeSet.c  TreeSet.h
DataLibC/DS/Stack/: Stack.c  Stack.h
DataLibC/DS/String/: String.c  String.h
DataLibC/DS/Tree/: tree.c  tree.h  tree_internal.h
DataLibC/Delegate/: Message.c  Message.h  Message_Internal.c  Message_Internal.h
DataLibC/Exception/: Exception.c  Exception.h
DataLibC/GC/: GC.c  GC.h
DataLibC/GFX/Camera/: Camera.c  Camera.h
DataLibC/GFX/Texture/: Texture.c  Texture.h  image_bmp.c  image_bmp.h  image_jpg.c  image_jpg.h  image_png.c  image_png.h
DataLibC/IO/: Print.c  Print.h
DataLibC/IO/Input/: Input.c  Input.h  InputEnum.h  InputState.c  InputState.h
DataLibC/IO/Serialization/Serializable/: ISerializable.c  ISerializable.h
DataLibC/IO/Serialization/Transfer/: JsonReader.c  JsonReader.h  JsonWriter.c  JsonWriter.h
DataLibC/IO/Serialization/Transfer/Interface/: ITransfer.c  ITransfer.h
DataLibC/IO/Serialization/Transfer/Internal/: Json.c  Json.h
DataLibC/IO/TextStream/: BufferedReader.c  BufferedReader.h  FileReader.c  FileReader.h  Reader.c  Reader.h  Reader_InternalMacro.h  StringReader.c  StringReader.h  Writer.c  Writer.h
DataLibC/LA/Math/: MathTool.c  MathTool.h
DataLibC/LA/Matrix/: Matrix3x3.c  Matrix3x3.h  Matrix4x4.c  Matrix4x4.h
DataLibC/LA/Vector/: Vector2.c  Vector2.h  Vector3.c  Vector3.h  Vector4.c  Vector4.h
DataLibC/Net/: Net.h
DataLibC/Net/Error/: NetError.c  NetError.h  NetError_Internal.c  NetError_Internal.h
DataLibC/Net/IPAddress/: IPAddress.c  IPAddress.h  IPAddress_Internal.h
DataLibC/Net/Socket/: Socket.c  Socket.h  Socket_Internal.c  Socket_Internal.h  TcpServer.c  TcpServer.h  UdpServer.c  UdpServer.h
DataLibC/Objective/: VField.c  VField.h  VMethod.c  VMethod.h  VObject.c  VObject.h  VType.c  VType.h  VType_Internal.h
DataLibC/Physics/: Physics.h
DataLibC/Physics/Backend/: PhysicsCore.c  PhysicsCore.h
DataLibC/Physics/Collider/: BoxCollider2D.c  BoxCollider2D.h  Collider.c  Collider.h  Collider2D.h
DataLibC/Physics/Collider/Internal/: Collider2DImpl.c  Collider2DImpl.h
DataLibC/Physics/RayCast/: Ray.c  Ray.h  RayCast.c  RayCast.h
DataLibC/Physics/Rigidbody/: RigidbodyType.h
DataLibC/Platform/Windows/: WinConsole.c
DataLibC/Pointer/: Pointer.c  Pointer.h  Pointer_Internal.c  Pointer_Internal.h
DataLibC/SFX/: Audio.c  Audio.h  AudioClip.c  AudioClip.h  AudioSource.c  AudioSource.h  AudioState.c  AudioState.h
DataLibC/System/Console/: Console.c  Console.h
DataLibC/Thread/: ConcurrentQueue.c  ConcurrentQueue.h  Mutex.c  Mutex.h  Task.c  Task.h  Task_Internal.h  ThreadPool.c  ThreadPool.h  Tread.c  Tread.h
DataLibC/Tool/: Color.h  Color32.h  ExportModuleMacro.h  LogMacro.h  Magic.h  Misc.c  Misc.h  TypeMacro.h  UnitTestingMacro.h  Utility.h
